<TableRow xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="match_parent"
    android:stretchColumns="5" >

    <TextView
        android:id="@+id/item_stock_date"
        android:layout_width="10dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="left|center_vertical"
        android:minHeight="40dp"
        android:text="@string/date" />

    <TextView
        android:id="@+id/item_stock_name"
        android:layout_width="10dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="left|center_vertical"
        android:text="@string/stock" />

    <TextView
        android:id="@+id/item_stock_volume"
        android:layout_width="3dp"
        android:layout_height="wrap_content"
        android:layout_marginRight="10dp"
        android:layout_weight="0.7"
        android:gravity="right|center_vertical"
        android:text="#" />

    <TextView
        android:id="@+id/item_stock_price"
        android:layout_width="5dp"
        android:layout_height="wrap_content"
        android:layout_weight="0.6"
        android:gravity="right|center_vertical"
        android:paddingRight="2dp"
        android:text="@string/price" />

    <TextView
        android:id="@+id/item_transaction_type"
        android:layout_width="8dp"
        android:layout_height="wrap_content"
        android:layout_weight="0.7"
        android:gravity="right|center_vertical"
        android:text="@string/type"
        android:textSize="10sp" />

</TableRow>