<TableRow xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="match_parent"
    android:stretchColumns="5" >

    <TextView
        android:id="@+id/item_cash_date"
        android:layout_width="10dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="left|center_vertical"
        android:minHeight="40dp"
        android:text="@string/date" />

    <TextView
        android:id="@+id/item_cash_type"
        android:layout_width="8dp"
        android:layout_height="wrap_content"
        android:layout_weight="0.7"
        android:gravity="left|center_vertical"
        android:text="@string/type" />

    <TextView
        android:id="@+id/item_cash_amount"
        android:layout_width="10dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="right|center_vertical"
        android:text="@string/amount_details" />

</TableRow>