<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:padding="5dp" >

    <TextView
        android:id="@+id/item_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/rename"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:gravity="center_vertical"
        android:text="@string/stock"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:textColor="@color/black"
        android:textSize="15sp"
        android:textStyle="bold" />

    <ImageView
        android:id="@+id/delete"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:contentDescription="@string/delete"
        android:maxHeight="40dp"
        android:maxWidth="40dp"
        android:src="@android:drawable/ic_menu_delete" />

    <ImageView
        android:id="@+id/rename"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/delete"
        android:layout_marginRight="16dp"
        android:layout_toLeftOf="@+id/delete"
        android:contentDescription="@string/rename"
        android:maxHeight="40dp"
        android:maxWidth="40dp"
        android:src="@android:drawable/ic_menu_edit" />

</RelativeLayout>