<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".TradeStocks" >

    <Button
        android:id="@+id/btnAddTransaction"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/etBroker"
        android:layout_alignRight="@+id/etBroker"
        android:layout_below="@+id/etBroker"
        android:layout_marginTop="15dp"
        android:onClick="addTransaction"
        android:text="@string/Add" />

    <CheckBox
        android:id="@+id/cbIntraday"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="15dp"
        android:minWidth="150dp"
        android:text="@string/intraday" />

    <Spinner
        android:id="@+id/spinnerAcount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/cbIntraday"
        android:layout_alignRight="@+id/cbIntraday"
        android:layout_below="@+id/cbIntraday"
        android:layout_marginTop="15dp"
        tools:listitem="@android:layout/simple_spinner_item" />

    <Spinner
        android:id="@+id/spinnerStock"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/spinnerAcount"
        android:layout_alignRight="@+id/spinnerAcount"
        android:layout_below="@+id/spinnerAcount"
        android:layout_marginTop="15dp"
        tools:listitem="@android:layout/simple_spinner_item" />

    <EditText
        android:id="@+id/etPrice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/spinnerStock"
        android:layout_alignRight="@+id/spinnerStock"
        android:layout_below="@+id/spinnerStock"
        android:layout_marginTop="15dp"
        android:ems="3"
        android:hint="@string/price"
        android:inputType="numberDecimal"
        android:maxLength="5"
        android:singleLine="true" />

    <EditText
        android:id="@+id/etVolume"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/etPrice"
        android:layout_alignRight="@+id/etPrice"
        android:layout_below="@+id/etPrice"
        android:layout_marginTop="15dp"
        android:ems="5"
        android:hint="@string/volume"
        android:inputType="number"
        android:maxLength="5"
        android:singleLine="true" >
    </EditText>

    <EditText
        android:id="@+id/etBroker"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/etVolume"
        android:layout_alignRight="@+id/etVolume"
        android:layout_below="@+id/etVolume"
        android:layout_marginTop="15dp"
        android:ems="5"
        android:focusable="false"
        android:hint="@string/broker"
        android:inputType="none|numberDecimal"
        android:singleLine="true" />

</RelativeLayout>