<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@layout/background_activity" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        tools:context=".Account" >

        <Spinner
            android:id="@+id/spinnerAccount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/etAmmount"
            android:layout_alignRight="@+id/etAmmount"
            android:layout_marginTop="12dp"
            android:gravity="center"
            tools:listitem="@android:layout/simple_spinner_item" />

        <Button
            android:id="@+id/btnSelectDate"
            style="@style/MyButton"
            android:layout_below="@+id/spinnerAccount"
            android:onClick="SetDate"
            android:text=""
            android:textSize="14sp" />

        <EditText
            android:id="@+id/etAmmount"
            style="@style/FloatField"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/btnSelectDate"
            android:layout_centerHorizontal="true"
            android:ems="12"
            android:inputType="numberDecimal"
            android:maxLength="6" >

            <requestFocus />
        </EditText>

        <RadioGroup
            android:id="@+id/radioOptions"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/etAmmount"
            android:layout_alignRight="@+id/etAmmount"
            android:layout_below="@+id/etAmmount"
            android:layout_marginTop="10dp"
            android:orientation="horizontal" >

            <RadioButton
                android:id="@+id/rbDeposit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:checked="true"
                android:text="@string/Deposit"
                android:textSize="12sp" />

            <RadioButton
                android:id="@+id/rbWithdraw"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/Withdraw"
                android:textSize="12sp" />
        </RadioGroup>

        <Button
            android:id="@+id/btnAddAmount"
            style="@style/MyButton"
            android:layout_below="@+id/radioOptions"
            android:onClick="addTransaction"
            android:text="@string/Add" />
    </RelativeLayout>

</ScrollView>